# Code-Generator

./: CMakeLists.txt  main.cpp  readme.md
bash/: cmake.bash  install.bash  make.bash  makerun_enum.bash  makerun_struct.bash
example/: genEnum.h  genStruct.h
example/test/: CMakeLists.txt  main.cpp
example/test/bash/: cmake.sh  makerun.sh
example/test/include/: test.h
example/test/src/: test.cpp
src/: CMakeLists.txt  cppprojgenor.cpp  enumgenor.cpp  structgenor.cpp
src/src/: enumgenor.cpp  structgenor.cpp
